add_library(doctrina
  "${CMAKE_CURRENT_SOURCE_DIR}/internal/hash.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/deque.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/heap.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/map.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/pq.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/set.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/stack.c"
  "${CMAKE_CURRENT_SOURCE_DIR}/trie.c"
)
